objects/ssot__SalesTerritoryAccountRcmdAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionCreationDateTime__c</fullName>
        <label>Action Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActionReferenceObject__c</fullName>
        <label>Action Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionReferenceRecordId__c</fullName>
        <label>Action Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActionType__c</fullName>
        <label>Action Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Territory Account Rcmd Action Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SkipReasonText__c</fullName>
        <label>Skip Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800772027_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountRcmdAction_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountRcmdAction_Acco_rel</relationshipLabel>
        <relationshipName>rel_1752800772027_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800781423_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountRcmdAction_Acti_rel</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountRcmdAction_Acti_rel</relationshipLabel>
        <relationshipName>rel_1752800781423_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800792004_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesTerritoryAccountRcmdAction_Sale_rel</label>
        <referenceTo>ssot__SalesTerritory__dlm</referenceTo>
        <relationshipLabel>SalesTerritoryAccountRcmdAction_Sale_rel</relationshipLabel>
        <relationshipName>rel_1752800792004_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>